[add] fix resume overflow in the bottom - no finished

--- a/resume/src/index.css
+++ b/resume/src/index.css
@@ -9,3 +9,10 @@
   --color-gray-900: #111827;
   --color-blue-600: #2563eb;
 }
+
+@media print {
+  @page {
+    size: 835px 1175px;
+    margin: 0;
+  }
+}
